@@ -4,11 +4,13 @@ import backend.airo.domain.area_code.MegaCode;
 import backend.airo.domain.area_code.repository.MegaRepository;
 import backend.airo.persistence.area_code.entity.MegaCodeEntity;
 import backend.airo.persistence.area_code.repository.MegaCodeJpaRepository;
+import backend.airo.persistence.shop.entity.ShopEntity;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -29,13 +31,26 @@ public class MegaCodeAdapter implements MegaRepository {
     }
 
     @Override
-    public MegaCode findById(Long aLong) {
+    public MegaCode findById(Long megaId) {
         return null;
     }
+
 
     @Override
     public List<MegaCode> findAll() {
         List<MegaCodeEntity> megaCodeEntities = megaCodeJpaRepository.findAll();
-        return megaCodeEntities.stream().map(MegaCodeEntity::toDomain).toList();
+        return megaCodeEntities.stream().map(MegaCodeEntity::toDomain).collect(Collectors.toList());
+    }
+
+    @Override
+    public Long findByMegaName(String megaName) {
+        return megaCodeJpaRepository.findByCtprvnNm(megaName).orElseThrow(() ->
+                new IllegalArgumentException("Shop Not Found with Name - " + megaName)).getCtprvnCd();
+    }
+
+    @Override
+    public String findByMegaCode(Long megaId) {
+        return megaCodeJpaRepository.findById(megaId).orElseThrow(() ->
+                new IllegalArgumentException("Shop Not Found with id - " + megaId)).getCtprvnNm();
     }
 }
